# myvote

./: .env.example  .env.local.example  .gitignore  .lintstagedrc.js  Dockerfile  LICENSE  README.md  dev.sqlite  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  flake.nix  jest.config.ts  jest.setup.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rename-column.js  tailwind.config.js
.github/: lint-and-format.yml
.github/workflows/: backend.yml  ci-dev-pr.yml  dependabot-auto-approve.yml  frontend.yml  jest.yml  lint-and-format.yml  lint.yml  (+2 more)
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  flake.nix  pyproject.toml  requirements.txt  setup.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: candidates.py
backend/app/utils/: snowflake.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_01_01_0146-9d60935937c6_init.py
backend/src/: config.py  db.py  hareclark.py  main.py  models.py  test_hareclark.py
backend/src/routers/: candidates.py  elections.py  membership.py  positions.py  results.py  votes.py
backend/src/utils/: snowflake.py
drizzle/: 0000_eminent_scarlet_spider.sql  0001_daffy_texas_twister.sql  0002_complete_pixie.sql  0003_breezy_frightful_four.sql
frontend/: .env.example  Dockerfile  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: auth.ts  env.mjs  middleware.ts  proxy.ts
tests/: header.spec.ts  home.spec.ts
(+150 files in other folders)
